--- a/WebChatBackend/WebChatBackend.SignalR/appsettings.json
+++ b/WebChatBackend/WebChatBackend.SignalR/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebChat;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
