--- a/WebChatBackend/WebChatBackend.WebAPI/Properties/launchSettings.json
+++ b/WebChatBackend/WebChatBackend.WebAPI/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "WebChatBackend.WebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/publicChat",
+      "launchUrl": "api/messages",
       //"applicationUrl": "https://localhost:5001;http://localhost:5000",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
