--- a/WebChatBackend/WebChatBackend.SignalR/WebChatBackend.SignalR.csproj
+++ b/WebChatBackend/WebChatBackend.SignalR/WebChatBackend.SignalR.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebChatBackend.Data\WebChatBackend.Data.csproj" />
+    <ProjectReference Include="..\WebChatBackend.Infrastructure\WebChatBackend.Infrastructure.csproj" />
     <ProjectReference Include="..\WebChatBackend.Services\WebChatBackend.Services.csproj" />
   </ItemGroup>
 
