Added login backend functionality

--- a/WebChatBackend/WebChatBackend.WebAPI/appsettings.json
+++ b/WebChatBackend/WebChatBackend.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebChat;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebChat1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
@@ -8,5 +8,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SecurityKey": "aNdRgUkXp2s5v8y/B?E(H+MbPeShVmYq3t6w9z$C&F)J@NcRfTjWnZr4u7x!A%D*"
 }
