--- a/WebChatBackend/WebChatBackend.Infrastructure/WebChatBackend.Infrastructure.csproj
+++ b/WebChatBackend/WebChatBackend.Infrastructure/WebChatBackend.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -6,11 +6,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WebChatBackend.Data\WebChatBackend.Data.csproj" />
     <ProjectReference Include="..\WebChatBackend.Services\WebChatBackend.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Security\" />
   </ItemGroup>
 
 </Project>
