login in form in react with fetch

--- a/WebChatBackend/WebChatBackend.Services/WebChatBackend.Services.csproj
+++ b/WebChatBackend/WebChatBackend.Services/WebChatBackend.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebChatBackend.Common\WebChatBackend.Common.csproj" />
     <ProjectReference Include="..\WebChatBackend.Data\WebChatBackend.Data.csproj" />
   </ItemGroup>
 
