--- a/web-chat/package.json
+++ b/web-chat/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "@aspnet/signalr": "^1.1.4",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "@aspnet/signalr": "^1.1.4"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
