--- a/web-chat/package.json
+++ b/web-chat/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
+    "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
