--- a/web-chat/package.json
+++ b/web-chat/package.json
@@ -7,6 +7,7 @@
     "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
