--- a/web-chat/package.json
+++ b/web-chat/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
+    "@fortawesome/fontawesome-free": "^5.11.1",
     "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
