--- a/WebChatBackend/WebChatBackend.SignalR/appsettings.json
+++ b/WebChatBackend/WebChatBackend.SignalR/appsettings.json
@@ -8,5 +8,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SecurityKey": "aNdRgUkXp2s5v8y/B?E(H+MbPeShVmYq3t6w9z$C&F)J@NcRfTjWnZr4u7x!A%D*"
 }
