--- a/WebChatBackend/WebChatBackend.WebAPI/appsettings.json
+++ b/WebChatBackend/WebChatBackend.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebChat1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebChat;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
