--- a/WebChatBackend/WebChatBackend.SignalR/Properties/launchSettings.json
+++ b/WebChatBackend/WebChatBackend.SignalR/Properties/launchSettings.json
@@ -1,27 +1,13 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:5012",
-      "sslPort": 44355
-    }
-  },
+{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Chat": {
+    "WebChatBackend.SignalR": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5012",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5012"
     }
   }
 }
