--- a/WebChatBackend/WebChatBackend.Infrastructure/WebChatBackend.Infrastructure.csproj
+++ b/WebChatBackend/WebChatBackend.Infrastructure/WebChatBackend.Infrastructure.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Security\**" />
+    <EmbeddedResource Remove="Security\**" />
+    <None Remove="Security\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
@@ -12,10 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\WebChatBackend.Data\WebChatBackend.Data.csproj" />
     <ProjectReference Include="..\WebChatBackend.Services\WebChatBackend.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Security\" />
   </ItemGroup>
 
 </Project>
