--- a/WebChatBackend/WebChatBackend.WebAPI/WebChatBackend.WebAPI.csproj
+++ b/WebChatBackend/WebChatBackend.WebAPI/WebChatBackend.WebAPI.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\WebChatBackend.Services\WebChatBackend.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
