--- a/WebChatBackend/WebChatBackend.WebAPI/appsettings.json
+++ b/WebChatBackend/WebChatBackend.WebAPI/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebChat;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-
+  "FileUploadLocation": "C:\\ASPFileUploadLocation",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
